tests/ui/zeroize/item_skip.stderr
error: unsupported skip group, expected one of Clone, Debug, EqHashOrd, Hash, Zeroize
 --> tests/ui/zeroize/item_skip.rs:6:27
  |
6 | #[derive_where(skip_inner(Copy))]
  |                           ^^^^
